@@ -1,5 +1,9 @@
 2000-08-24  Christopher James Lahey  <clahey@helixcode.com>
 
+	* e-table.c: Fix an off by one error that was causing crashes.
+
+2000-08-24  Christopher James Lahey  <clahey@helixcode.com>
+
 	* e-table.c: Set default values for all of the signal emissions.
 
 2000-08-24  Christopher James Lahey  <clahey@helixcode.com>
